--- a/game/game.html
+++ b/game/game.html
@@ -12,26 +12,26 @@
         <p>choose "rock", "paper", or ,"Scissors" below and click Enter</p>
      <div class="main">
         <div>
-            <input type="radio" id="game" name="game">
-            <label for="Rock">Rock</label>
+            <input type="radio" class="game" name="game" value="rock">
+            <label for="rock">Rock</label>
         </div>
 
         <div>
-            <input type="radio" id="game" name="game">
+            <input type="radio" class="game" name="game" value="paper">
             <label for="paper">Paper</label>
         </div>
 
         <div>
-            <input type="radio" id="game" name="game">
+            <input type="radio" class="game" name="game" value="scissors">
             <label for="Scissors">Scissors</label>
         </div>
 
       </div>
 
-       <button id="Enter">Enter</button>
+       <button id="enter">Enter</button>
 
         <div class="scores">
-              <p>User Score: <Score:span id="userScore">0</Score:span></p>
+              <p>User Score: <span id="userScore">0</Score:span></p>
               <p>Computer Score: <span id="computerScore">0</span></p>
         </div>
 
